# telegramm_bot

./: .gitignore  currency_rates.json  main.py  pyproject.toml
