[tool.poetry]
name = "course-of-money"
version = "0.1.0"
description = ""
authors = ["vertiporogov <133884681+vertiporogov@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "course_of_money"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

